INCLUDES += -I$(srcdir) -I$(srcdir)/vmap -I$(srcdir)/g3dlite

noinst_LIBRARIES = libshared.a

libshared_a_SOURCES = \
    CThreads.cpp \
    CThreads.h \
    Log.cpp \
    MemoryLeaks.cpp \
    MersenneTwister.cpp \
    MersenneTwister.h \
    PreallocatedQueue.h \
    ByteBuffer.h \
    Common.h \
    Errors.h \
    Log.h \
    MemoryLeaks.h \
    Singleton.h \
    Threading.h \
    Timer.h \
    UnixThreading.h \
    Util.h \
    Util.cpp \
    WinThreading.h \
    WorldPacket.h \
    crc32.cpp \
    crc32.h \
    FastQueue.h \
    Threading/Mutex.cpp \
    Threading/ThreadPool.cpp \
    Storage.h \
    ascent_extra_functions.h \
    ascent_extra_functions.cpp \
    CrashHandler.h \
    CrashHandler.cpp \
    Auth/BigNumber.cpp \
    Auth/BigNumber.h \
    Auth/MD5.cpp \
    Auth/MD5.h \
    Auth/Sha1.cpp \
    Auth/Sha1.h \
    Auth/WowCrypt.cpp \
    Auth/WowCrypt.h \
    Config/Config.cpp \
    Config/Config.h \
    Config/ConfigEnv.h \
    Database/DBC.cpp \
    Database/Database.cpp \
    Database/DBC.h \
    Database/Database.h \
    Database/DBCStores.cpp \
    Database/DatabaseEnv.h \
    Database/DBCStores.h \
    Database/Field.h \
    Database/DataStore.h \
    Database/dbcfile.cpp \
    Database/dbcfile.h \
    Database/MySQLDatabase.cpp \
    Database/MySQLDatabase.h \
    Database/PostgresDatabase.cpp \
    Database/PostgresDatabase.h \
    Database/SQLiteDatabase.cpp \
    Database/SQLiteDatabase.h \
    Database/CreateInterface.cpp \
    Network/CircularBuffer.h \
    Network/CircularBuffer.cpp \
    Network/ListenSocketLinux.h \
    Network/ListenSocketFreeBSD.h \
    Network/Network.h \
    Network/Socket.cpp \
    Network/Socket.h \
    Network/SocketDefines.h \
    Network/SocketLinux.cpp \
    Network/SocketFreeBSD.cpp \
    Network/SocketMgrLinux.cpp \
    Network/SocketMgrLinux.h \
    Network/SocketMgrFreeBSD.cpp \
    Network/SocketMgrFreeBSD.h \
    Network/SocketOps.h \
    Network/SocketOpsLinux.cpp \
    Network/SocketOpsFreeBSD.cpp \
    vmap/AABSPTree.h \
    vmap/BaseModel.cpp \
    vmap/BaseModel.h \
    vmap/CoordModelMapping.cpp \
    vmap/CoordModelMapping.h \
    vmap/IVMapManager.h \
    vmap/ManagedModelContainer.cpp \
    vmap/ManagedModelContainer.h \
    vmap/ModelContainer.cpp \
    vmap/ModelContainer.h \
    vmap/NodeValueAccess.h \
    vmap/RayIntersectionIterator.h \
    vmap/ShortBox.h \
    vmap/ShortVector.h \
    vmap/SubModel.cpp \
    vmap/SubModel.h \
    vmap/TileAssembler.cpp \
    vmap/TileAssembler.h \
    vmap/TreeNode.cpp \
    vmap/TreeNode.h \
    vmap/VMapManager.cpp \
    vmap/VMapManager.h \
    g3dlite/AABox.cpp \
    g3dlite/Box.cpp \
    g3dlite/Crypto.cpp \
    g3dlite/Matrix3.cpp \
    g3dlite/Plane.cpp \
    g3dlite/System.cpp \
    g3dlite/Triangle.cpp \
    g3dlite/Vector3.cpp \
    g3dlite/Vector4.cpp \
    g3dlite/format.cpp
